--- a/view/about.html
+++ b/view/about.html
@@ -1,4 +1,8 @@
 <ion-view title="About" hide-back-button="true" id="about" cache-view="false">
+    <ion-header-bar class="bar-subheader item-button-left test-item" ui-sref="app.categories({projectId:projectId})">
+        <span class="back-arrow ion-ios-arrow-left"></span>
+        <span class="header-prj-text">About</span>
+    </ion-header-bar>
     <ion-content class=" has-header padding">
         <div class="login-logo">
             <img src="img/logo.png">
