--- a/view/form.html
+++ b/view/form.html
@@ -108,108 +108,31 @@
                     </button>
                 </div>
             </div>
-            <div class="list" ng-if="filter.state === 'resource' && !filter.substate">
-                <a class="item item-button-left subHeader-form-bar" ng-click="filter.state = 'form'">
-                    <div class="back-arrow ion-ios-arrow-left"></div>
-                    <div class="header-prj-text" style="width: calc(100% - 50px);"><span style="max-width: 35%; display: inline-block;text-overflow: ellipsis;overflow: hidden;vertical-align: middle;">{{formData.name}}</span>
-                        <span style="vertical-align: middle;display:inline-block">&nbsp;/&nbsp;Resource</span> <span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle">Done</span></div>
-                </a>
-                <form class="form-new-fields">
-                    <div class="item" ng-repeat="resource in resourceField.resources" ng-click="filter.substate = resource">
-                        <span ng-if="!resource.name">Resource {{$index + 1}}</span>
-                        <span ng-if="resource.name">{{resource.name}}</span>
-                    </div>    
-                    <div class="item item-total" ng-if="resourceField.financial_option">
-                        Total
-                        <div>
-                            {{resourceField.total_cost}}
-                        </div>
-
-                    </div> 
-                </form>
-                <button class="btn-add" ng-click="addResource()">   
-                    <i class="ion-ios-plus-empty"></i>
-                </button>
-            </div>
-            <div class="list" ng-if="filter.state === 'resource' && filter.substate">
-                <a class="item item-button-left subHeader-form-bar" ng-click="filter.substate = null">
-                    <div class="back-arrow ion-ios-arrow-left"></div>
-                    <div class="header-prj-text" style="width: calc(100% - 50px);"><span style="max-width: 35%; display: inline-block;text-overflow: ellipsis;overflow: hidden;vertical-align: middle;">{{formData.name}}</span>
-                        <span style="vertical-align: middle;display:inline-block">&nbsp;/&nbsp;Resource</span> <span style="float:right;display: inline-block;margin-right: -25px;vertical-align: middle">Save</span></div>
-                </a>
-                <div class="formTitle">
-                    <div class="header-prj-text"> Design: {{formData.name}}</div>
-                    <div class="blue-label">{{formData.id}}</div>
-                </div>
-                <form class="form-container-bgd">
-                    <div style="position: relative; margin-bottom:5px">
-                        <div class="item-stable item fs all-field-header isOpen" style="width:100%">
-                            <div class="fieldSet-name" ng-if="filter.substate.name">{{filter.substate.name}}</div>
-                            <div class="fieldSet-name" ng-if="!filter.substate.name">Resource field</div>
-                        </div>
-                        <div class="blue-dropArrow"></div>
-                        <div class="formContent">
-                            <div class="calm-border" ng-if="resourceField.date_option">
-                                <label class="item item-input item-stacked-label calm-border">
-                                    <div class="inputLabel" style="padding-top: 10px;">
-                                        <span class="all-name">Date</span>
-                                    </div>
-                                    <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substate.current_day">
-                                </label>
-                            </div>
-                            <div class="calm-border">
-                                <label class="item item-input item-stacked-label calm-border">
-                                    <div class="inputLabel" style="padding-top: 10px;">
-                                        <span class="all-name">Name</span>
-                                    </div>                                    
-                                    <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substate.name" list="resource_list" ionic-autocomplete params="{item: resource_list, onSelect: onSelect}">
-                                </label>
-                            </div>
-                            <div class="calm-border">
-                                <label class="item item-input item-stacked-label calm-border">
-                                    <div class="inputLabel" style="padding-top: 10px;">
-                                        <span class="all-name">Product ref</span>
-                                    </div>
-                                    <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" ng-model="filter.substate.product_ref">
-                                </label>
-                            </div>                                                        
-                            <div class="calm-border">
-                                <label class="item item-input item-stacked-label calm-border">
-                                    <div class="inputLabel" style="padding-top: 10px;">
-                                        <span class="all-name">Unit</span>
-                                    </div>
-                                    <select class="form-select" ng-options="option as option.name for option in unit_list track by option.id" ng-model="filter.substate.unit_obj" ng-init="filter.substate.unit_obj = unit_list[0]"></select>
-                                </label>
-                            </div>
-                            <div class="calm-border">
-                                <label class="item item-input item-stacked-label calm-border">
-                                    <div class="inputLabel" style="padding-top: 10px;">
-                                        <span class="all-name">Resource type</span>
-                                    </div>
-                                    <select class="form-select" ng-options="option as option.name for option in resource_type_list track by option.id" ng-model="filter.substate.resource_type_obj" ng-init="filter.substate.resource_type_obj = resource_type_list[0]"></select>
-                                </label>
-                            </div>
-                            <div class="calm-border">
-                                <label class="item item-input item-stacked-label calm-border">
-                                    <div class="inputLabel" style="padding-top: 10px;">
-                                        <span class="all-name">Quantity</span>
-                                    </div>
-                                    <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" type="number" ng-model="filter.substate.quantity">
-                                </label>
-                            </div>
-                            <div class="calm-border" ng-if="resourceField.financial_option">
-                                <label class="item item-input item-stacked-label calm-border">
-                                    <div class="inputLabel" style="padding-top: 10px;">
-                                        <span class="all-name">Direct cost</span>
-                                    </div>
-                                    <input style="padding-left:15px; padding-right:15px;border-top-left-radius: 0px; border-top-right-radius: 0px;" type="number" ng-model="filter.substate.direct_cost">
-                                </label>
-                            </div>
-                        </div>
-
-                    </div>
-                </form>                
-            </div>
+            <div class="list" ng-if="filter.state === 'resource'" ng-include="'view/form/_resource.html'"></div>
+            <div class="list" ng-if="filter.state === 'staff'" ng-include="'view/form/_staff.html'"></div>
+            <div class="list" ng-if="filter.state === 'payitem'" ng-include="'view/form/_payitem.html'"></div>
+            <div class="list" ng-if="filter.state === 'scheduling'" ng-include="'view/form/_scheduling.html'"></div>
         </div>
     </ion-content>
+    <div ng-if="!filter.substateRes && !filter.substateStkRes && filter.state !== 'form' && filter.state !== 'staff' || (!filter.substate && filter.state === 'staff')" >
+        <button class="btn-add-resource" ng-click="addResourcePi()" ng-if="filter.actionBtn && filter.substate.subtasks.length === 0 && filter.substate.resources.length === 0">   
+            Add resource
+        </button>
+        <button class="btn-add-subtask" ng-click="addSubtask()" ng-if="filter.actionBtn && filter.substate.resources.length === 0 && filter.substate.subtasks.length === 0">   
+            Add subtask
+        </button>
+        <button class="btn-add" ng-click="actionBtnPayitem();">   
+            <i class="ion-ios-plus-empty"></i>            
+        </button>
+    </div>
+    <div ng-if="filter.state === 'payitem' && (filter.substateRes || filter.substateStkRes)" >       
+        <button class="btn-add" ng-click="actionBtnCalculation();" ng-if="filter.substateRes">   
+            <i ng-if="!filter.substateRes.calculation" class="ion-ios-calculator-outline" style="font-size: 42px;margin-top: 0px;"></i>            
+            <i ng-if="filter.substateRes.calculation" class="ion-ios-calculator" style="font-size: 42px;margin-top: 0px;"></i>            
+        </button>
+        <button class="btn-add" ng-click="actionBtnCalculation();" ng-if="filter.substateStkRes">   
+            <i ng-if="!filter.substateStkRes.calculation" class="ion-ios-calculator-outline" style="font-size: 42px;margin-top: 0px;"></i>            
+            <i ng-if="filter.substateStkRes.calculation" class="ion-ios-calculator" style="font-size: 42px;margin-top: 0px;"></i>            
+        </button>
+    </div>
 </ion-view>
